# lambda-study

./: .env.sample  .gitignore  README.md  docker-compose.yml  memo.md
album-api/: README.md  apigateway.tf  lambda.tf  s3.tf  samconfig.toml  start-api-local.sh  template.yaml  variables.tf
album-api/hello_world/: Dockerfile  app.py  requirements.txt
album-api/hello_world/util/: db.py  image.py
mysql/: Dockerfile  my.cnf
mysql/initdb.d/: beego_local.sql  init.sql
todo-api/: README.md  samconfig.toml  start-api-local.sh  template.yaml
todo-api/hello_world/: Dockerfile  Makefile  app.py  pyproject.toml  setup.cfg
todo-api/hello_world/util/: db.py
